commit plot update, new calling obj function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,19 +2,27 @@
 
 S3method(print,NicheR_species)
 S3method(print,ellipsoid)
-S3method(print,nicheR_bias_surface)
 S3method(print,suitable_env)
 export(as.data.frame.nicheR)
 export(build_ellps)
 export(create_virtual_species)
 export(get_sample_occ)
 export(get_suitable_env)
+export(nr_get)
+export(nr_get_bias)
+export(nr_get_bias_pooled)
+export(nr_get_bias_stack)
+export(nr_get_dist_sq)
+export(nr_get_env)
+export(nr_get_niche)
+export(nr_get_occ)
+export(nr_get_suitable)
+export(nr_get_suitable_all)
+export(nr_get_suitable_df)
 export(plot_e_space)
 export(plot_g_space)
-export(set_bias_surface)
+export(set_bias_surface_new)
 export(validate_plot_e_space_args)
-import(RColorBrewer)
-import(dplyr)
 import(ggplot2)
 importFrom(DBI,dbConnect)
 importFrom(DBI,dbDisconnect)
@@ -31,18 +39,11 @@ importFrom(raster,extent)
 importFrom(raster,ncell)
 importFrom(rlang,.data)
 importFrom(sf,st_as_sf)
-importFrom(terra,app)
 importFrom(terra,as.data.frame)
-importFrom(terra,as.list)
 importFrom(terra,crop)
 importFrom(terra,ext)
-importFrom(terra,mask)
 importFrom(terra,ncell)
 importFrom(terra,nlyr)
-importFrom(terra,rast)
-importFrom(terra,res)
-importFrom(terra,resample)
-importFrom(terra,values)
 importFrom(terra,xmax)
 importFrom(terra,xmin)
 importFrom(terra,yFromRow)
