commit with small edits/ working on to dos

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,12 +5,14 @@ S3method(print,nicheR_ellipsoid)
 export(apply_bias)
 export(build_ellipsoid)
 export(covariance_limits)
+export(ellipsoid_calculator)
 export(ellipsoid_volume)
 export(plot_ellipsoid)
 export(plot_nicheR)
 export(prepare_bias)
 export(ranges_from_data)
 export(ranges_from_stats)
+export(resolve_prediction)
 export(sample_data)
 export(update_covariance)
 export(update_ellipsoid_covariance)
