function to generate virtual data based on an ellipsoid created and documented

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,3 +18,4 @@ export(resolve_prediction)
 export(sample_data)
 export(update_covariance)
 export(update_ellipsoid_covariance)
+export(virtual_data)
